# games101

./: .gitignore  CMakeLists.txt  note.md
work0/: CMakeLists.txt  main.cpp
work1/: CMakeLists.txt  main.cpp
work2/: CMakeLists.txt  main.cpp  rasterizer.cpp
work3/: CMakeLists.txt  Texture.hpp  main.cpp  rasterizer.cpp
work4/: CMakeLists.txt  main.cpp
work5/: CMakeLists.txt  Renderer.cpp  Triangle.hpp  global.hpp
work6/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Renderer.cpp  Triangle.hpp
